--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 
 .images {
     margin: 10px;
+    margin-top: 30px;
 }
 
 #searchHere {
@@ -21,16 +22,23 @@
     width: 400px
 }
 
+#addButton {
+    margin: 10px;
+    color: black;
+    background-color: rgb(245, 194, 56);
+    font-weight: bold; 
+}
+
 #userInput {
     width: 400px;
     margin-bottom: 10px;
 }
 
 #gifs-appear-here {
-    margin: 10px;
+    margin: 30px;
 }
 
-p {
-margin: 20px;
-
+#ratings {
+    position: absolute;
+    display: inline-block;
 }
